# learn-german-vocabulary

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
myapp/: admin.py  filters.py  forms.py  models.py  token.py  urls.py  views.py
myapp/migrations/: 0001_initial.py
myproject/: settings.py  urls.py
static/css/: main.css
templates/: account.html  activate_account.html  all_users.html  article_count.html  base.html  base_old.html  create_vocabulary.html  delete_account.html  delete_vocabulary.html  footer.html  home.html  index.html  login.html  my_vocabulary.html  navbar.html  register.html  register_old.html  search_vocabulary.html  update_vocabulary.html  user.html  vocabularie.html  vocabularies.html
