[tool.poetry]
name = "my-german-site"
version = "0.1.0"
description = ""
authors = ["sathishlakshmanan <sathishklakshmanan@gmail.com>"]
readme = "README.md"
packages = [{include = "my_german_site"}]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "^3.5.2"
django = "^4.1.4"
django-environ = "^0.9.0"
mysqlclient = "^2.1.1"
psycopg2-binary = "^2.9.5"
sqlparse = "^0.4.3"
tzdata = "^2022.7"
pytz = "^2022.6"
django-filter = "^22.1"
gunicorn = "^20.1.0"
six = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
